# luna-sysmgr-ipc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Ubuntu  Makefile.inc  README.md
files/pkgconfig/: LunaSysMgrIpc.pc.in
ipc/: PIpcChannel.cpp  PIpcMessage.cpp  PIpcMutex.cpp  PIpcSocketSource.cpp
src/base/: basictypes.h  pickle.cpp  pickle.h  tuple.h
src/ipc/: PIpcAsyncCaller.cpp  PIpcAsyncCaller.h  PIpcBuffer.cpp  PIpcBuffer.h  PIpcChannel.cpp  PIpcChannel.h  PIpcChannelListener.h  PIpcClient.cpp  PIpcClient.h  PIpcMessage.cpp  PIpcMessage.h  PIpcMessageMacros.h  PIpcMessageUtils.h  PIpcMutex.cpp  PIpcMutex.h  PIpcServer.cpp  PIpcServer.h  PIpcSocketSource.cpp  PIpcSocketSource.h
